Add self-contained Linux application image